Boolean integration, refactoring