@@ -3,10 +3,11 @@ package dev.vladimir.cfecodemodule.parsing;
 import dev.vladimir.cfecodemodule.tokens.Token;
 import dev.vladimir.cfecodemodule.tokens.another.LoggerToken;
 import dev.vladimir.cfecodemodule.tokens.another.VariableNameToken;
-import dev.vladimir.cfecodemodule.tokens.primitiveoperators.DivisionOperatorToken;
-import dev.vladimir.cfecodemodule.tokens.primitiveoperators.MinusOperatorToken;
-import dev.vladimir.cfecodemodule.tokens.primitiveoperators.MultiplierOperatorToken;
-import dev.vladimir.cfecodemodule.tokens.primitiveoperators.PlusOperatorToken;
+import dev.vladimir.cfecodemodule.tokens.primitiveoperators.bool.*;
+import dev.vladimir.cfecodemodule.tokens.primitiveoperators.integer.DivisionOperatorToken;
+import dev.vladimir.cfecodemodule.tokens.primitiveoperators.integer.MinusOperatorToken;
+import dev.vladimir.cfecodemodule.tokens.primitiveoperators.integer.MultiplierOperatorToken;
+import dev.vladimir.cfecodemodule.tokens.primitiveoperators.integer.PlusOperatorToken;
 import dev.vladimir.cfecodemodule.tokens.primitivetypes.BooleanTypeToken;
 import dev.vladimir.cfecodemodule.tokens.primitivetypes.IntegerTypeToken;
 import dev.vladimir.cfecodemodule.tokens.primitivevalues.BooleanValueToken;
@@ -24,15 +25,27 @@ public class Lexer {
     private static final List<? extends Token> ALL_TOKENS = Arrays.asList(
             new IntegerTypeToken(),
             new BooleanTypeToken(),
+
             new IntegerValueToken(),
             new BooleanValueToken(),
-            new AssignmentToken(),
-            new LoggerToken(),
+
+            new BooleanAndOperatorToken(),
+            new BooleanOrOperatorToken(),
+
+            new ObjectLessOperatorToken(),
+            new ObjectMoreOperatorToken(),
+            new ObjectEqualsOperatorToken(),
+            new ObjectNotEqualsOperatorToken(),
+
             new PlusOperatorToken(),
             new MinusOperatorToken(),
             new MultiplierOperatorToken(),
             new DivisionOperatorToken(),
+
+            new AssignmentToken(),
             new SemicolonToken(),
+
+            new LoggerToken(),
             new VariableNameToken()
     );
     private final String[] lines;
@@ -49,7 +62,7 @@ public class Lexer {
         for (int i = 0; i < lines.length; i++) {
             String line = lines[i];
 
-            if (line.startsWith(LINE_COMMENTARY_SYMBOL) || line.isEmpty())
+            if (line.startsWith(LINE_COMMENTARY_SYMBOL) || line.isEmpty() || line.length() == 1)
                 continue;
 
             ArrayList<Token> currentLine = new ArrayList<>();
@@ -62,19 +75,18 @@ public class Lexer {
 
             result.add(currentLine);
         }
-
         return result;
     }
 
     private Token tokenOf(String value, int line) {
         for (Token token : ALL_TOKENS) {
             for (String regex : token.getRegex()) {
-                final Pattern pattern = Pattern.compile(regex, Pattern.MULTILINE);
-                final Matcher matcher = pattern.matcher(value);
+                Pattern pattern = Pattern.compile(regex, Pattern.MULTILINE);
+                Matcher matcher = pattern.matcher(value);
 
                 if(matcher.find()) {
                     try {
-                        Token foundedToken = token.getClass().getDeclaredConstructor(null).newInstance();
+                        Token foundedToken = token.getClass().getDeclaredConstructor().newInstance();
                         foundedToken.setValue(value);
                         foundedToken.setLine(line);
 
@@ -83,6 +95,9 @@ public class Lexer {
                 }
             }
         }
-        throw new IllegalArgumentException(String.format("illegal token with value '%s' on line %d", value, line));
+
+        throw new IllegalArgumentException(
+                String.format("illegal token with value %s on line %d", value, line)
+        );
     }
 }
